# baseten-skills

./: .env.example  .gitignore  .pre-commit-config.yaml  .prototools  .skill-creator-version  .tool-versions  AGENTS.md  CONTRIBUTING.md  EVALS.md  LICENSE  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: pre-commit.yml
eval-results/baseten/: 2026-04-17.md  stats.jsonl
evals/: pyproject.toml
evals/fixtures/broken-deployment/: config.yaml  pre_run.sh
evals/fixtures/broken-deployment/model/: model.py
evals/fixtures/deployment-no-model-cache/: config.yaml
evals/fixtures/deployment-no-model-cache/model/: model.py
evals/fixtures/model-low-replicas/: config.yaml  pre_run.sh
evals/fixtures/model-low-replicas/model/: model.py
evals/fixtures/model-with-dev-deployment/: config.yaml  pre_run.sh
evals/fixtures/two-deployments-regression/good/: config.yaml
evals/fixtures/two-deployments-regression/regression/: config.yaml
evals/src/baseten_skills_evals/: analyze.py  runner.py
skills/baseten/: SKILL-new.md  SKILL.md
skills/baseten/evals/: evals.json  fixtures.json
skills/baseten/references/: deployment-lifecycle.md  inference-api.md  management-api.md  model-apis.md  model-dev-loop.md  truss-chains.md  truss-cli.md  truss-config.md  truss-custom-servers.md  truss-model-py.md
