[project]
name = "baseten-skills-evals"
version = "0.0.1"
description = "Regression eval harness for baseten-skills"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0.0",
  "truss>=0.10",  # so claude subprocesses can shell out to `truss …`
  "numpy>=1.26",
  "pandas>=2.2",  # tabular aggregation in analyze.py
]

[dependency-groups]
dev = ["ruff==0.9.10"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "baseten_skills_evals"
module-root = "src"
